[tool.poetry]
name = "temporal-boost"
version = "1.0.1"
description = "Small framework for Temporal development"
authors = ["northpowered <you@example.com>"]
readme = "README.md"
packages = [{include = "temporal_boost"}]
repository = "https://github.com/northpowered/temporal-boost"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
opentelemetry-exporter-otlp = "^1.20.0"
loguru = "^0.7.2"
opentelemetry-sdk = "^1.20.0"
temporalio = "^1.5.1"
pydantic = "^2.5.2"
hypercorn = {version = "^0.16.0", extras = ["trio"]}
robyn = "^0.58.0"
pyyaml = "^6.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
fastapi = "^0.110.0"



[tool.poetry.group.lint.dependencies]
ruff = "^0.5.5"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.31"
mkdocs-material-extensions = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "W", "C", "UP", "I", "SIM", "N"]
# Ignore 815 and 803 to avoid aliased for external APIs
ignore = ["N815", "N803"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 130


